--- a/Youtube app/style.css
+++ b/Youtube app/style.css
@@ -1,6 +1,7 @@
 
 h1{
     text-align: center;
+    font-weight: bold;
 }
 #search-container{
     display: flex;
@@ -17,10 +18,11 @@ h1{
     border: 2px solid black;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
-    border-right: none;
+    outline: none;
 }
 #search-container>input:focus{
-    outline-color: blue;
+    border-right: 2px solid blue;
+    border-color: blue;
 }
 #search-container>button{
     font-size: 25px;
@@ -36,12 +38,12 @@ h1{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    column-gap: 40px;
+    column-gap: 20px;
     row-gap: 20px;
 }
 #content div{
     cursor: pointer;
-     width: 400px; 
+    width: 300px; 
 }
 #content div>img{
    width: 100%;
@@ -58,13 +60,14 @@ h1{
     color: rgb(169, 162, 162);
 }
 #video-content{
-    max-width: 900px;
-    margin: 50px 3% 10px;
+    width: 843px;
+    padding: 50px 15px;
 }
 #video-content>iframe{
     width:100%;
-    height: 450px;
+    height: 475px;
     border-radius: 20px;
+    border: none;
 }
 #video-content>h4{
     margin: 5px 0px 0px;
