--- a/Movies-app/style.css
+++ b/Movies-app/style.css
@@ -14,7 +14,6 @@ body{
 #nav-bar{
     position: fixed;
     top: 0;
-    padding: 15px;
     width: 100%;
     z-index: 3;
     background: linear-gradient(rgba(0, 0, 0, .92) 6%, rgba(0, 0, 0, .45) 63%, rgba(0, 0, 0, 0));
@@ -23,6 +22,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    padding: 15px;
 }
 #nav-links,#nav-search{
     display: flex;
@@ -182,7 +182,7 @@ margin-top: 30px;
         display: block;
         position: absolute;
         left: 5%;
-        top: 25px;
+        top: 15px;
         font-size: 38px;
         font-weight: bold;
         cursor: pointer;
@@ -202,12 +202,13 @@ margin-top: 30px;
         display: none;
     }
     #container>img{
-        height: 300px;
+        height: 250px;
     }
     /* #trending-movies{
         justify-content: center;
     } */
     #nav-links,#nav-search{
+        gap: 20px;
         display: none;
     }
     #nav-links.active,#nav-search.active{
