--- a/Movies-app/style.css
+++ b/Movies-app/style.css
@@ -97,7 +97,9 @@ body{
     background-color: rgb(0,0,0,0.5);
 }
 /* movies  */
-
+h1{
+    padding-left:20px;
+}
 #trending-movies,#action-movies{
     display:flex;
     overflow-x: scroll;
@@ -213,5 +215,18 @@ margin-top: 30px;
     }
     #nav-links.active,#nav-search.active{
         display: flex;
+    }
+    #grid-items{
+        min-width: 100px;
+        max-width: 100px;
+        height: 210px;
+        overflow: hidden;
+        text-align: center;
+        transition: 0.6s ease-out;
+    }
+    #grid-items>img{
+        width: 100px;
+        height: 150px;
+        border-radius: 10px;
     }
 }
